@@ -5,7 +5,7 @@ module Relapse
   # @abstract
   class TarArchiver < Archiver
     def command(folder)
-      %[7z a -so -mmt -bd -ttar "#{folder}.tar" "#{folder}" | 7z a -si -bd -t#{format} "#{folder}.#{extension}"]
+      %[7z a -so -mmt -bd -ttar "#{folder}.tar" "#{folder}" | 7z a -si -bd -t#{format} "#{folder}#{extension}"]
     end
   end
 end
