@@ -64,7 +64,6 @@ context Relapse::Builders::Win32Standalone do
     else
       context "NOT on Windows" do
         asserts(:active_builders).empty
-        asserts(:generate_tasks).raises RuntimeError
       end
     end
   end
