@@ -2,6 +2,7 @@
 
   * Allowed outputs to be configured separately from the project (Warning: API changed significantly).
   * Included gems in osx-app more safely, so that no files will be missing.
+  * Added :exe archive format (win32 self-extractor, made on any OS).
 
 = v0.1.0
 
